first iteration at adding content

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,104 +1,90 @@
 [
   {
-    "title": "E-commerce Platform Redesign",
-    "slug": "ecommerce-redesign",
-    "shortDescription": "Complete redesign of an e-commerce platform focusing on user experience and conversion optimization.",
-    "description": "This project involved a complete redesign of an e-commerce platform serving over 100,000 monthly users. The existing platform suffered from poor conversion rates, confusing navigation, and accessibility issues.",
-    "image": "assets/images/project-ecommerce.jpg",
-    "tags": ["UI/UX Design", "E-commerce", "User Research", "Prototyping"],
+    "title": "Rediseño de Plataforma E-learning",
+    "slug": "plataforma-elearning",
+    "shortDescription": "Rediseño completo de una plataforma de aprendizaje digital centrada en la experiencia del usuario y la accesibilidad.",
+    "description": "Proyecto de rediseño de una plataforma e-learning utilizada por más de 500 usuarios. El objetivo fue mejorar la experiencia de aprendizaje, la navegación y la accesibilidad para diferentes tipos de usuarios.",
+    "image": "assets/images/project-1.jpg",
+    "tags": ["Investigación UX", "Diseño UI", "Prototipado", "Accesibilidad"],
     "categories": ["web", "research"],
     "featured": true,
     "year": "2024",
-    "role": "Lead UX Designer",
-    "duration": "6 months",
-    "team": "4 designers, 6 developers",
+    "role": "UX/UI Designer",
+    "duration": "4 meses",
+    "team": "2 diseñadores, 3 desarrolladores",
     "results": {
-      "conversionIncrease": "+180%",
-      "abandonmentReduction": "-45%",
-      "mobileEngagement": "+65%",
-      "userSatisfaction": "4.8/5"
+      "userSatisfaction": "+85%",
+      "completionRate": "+60%",
+      "accessibilityScore": "98%",
+      "userEngagement": "+40%"
     }
   },
   {
-    "title": "Mobile Banking App",
-    "slug": "mobile-banking-app",
-    "shortDescription": "Design of a secure and intuitive mobile banking application with focus on accessibility.",
-    "description": "Designed a comprehensive mobile banking application that prioritizes security, accessibility, and user experience for a major financial institution.",
-    "image": "assets/images/project-banking.jpg",
-    "tags": ["Mobile Design", "Banking", "Accessibility", "Security"],
-    "categories": ["mobile", "design-system"],
+    "title": "App Móvil para Gestión Social",
+    "slug": "app-gestion-social",
+    "shortDescription": "Aplicación móvil para la gestión de casos sociales y seguimiento de usuarios en organizaciones del tercer sector.",
+    "description": "Diseño de una aplicación móvil completa para trabajadores sociales que permite la gestión eficiente de casos, seguimiento de usuarios y generación de informes, optimizada para uso en campo.",
+    "image": "assets/images/project-2.jpg",
+    "tags": ["Diseño Móvil", "UX Research", "Gestión de Datos", "Trabajo Social"],
+    "categories": ["mobile", "research"],
     "featured": true,
-    "year": "2023",
-    "role": "Senior UX Designer",
-    "duration": "8 months",
-    "team": "3 designers, 8 developers",
+    "year": "2024",
+    "role": "Lead UX Designer",
+    "duration": "6 meses",
+    "team": "3 diseñadores, 4 desarrolladores, 2 trabajadores sociales",
     "results": {
-      "userAdoption": "+120%",
-      "transactionTime": "-60%",
-      "supportTickets": "-40%",
-      "accessibilityScore": "98%"
+      "efficiency": "+70%",
+      "userAdoption": "+90%",
+      "dataAccuracy": "+55%",
+      "fieldUsability": "95%"
     }
   },
   {
-    "title": "Design System Creation",
-    "slug": "design-system-creation",
-    "shortDescription": "Comprehensive design system development for a SaaS platform including components and guidelines.",
-    "description": "Created a scalable design system for a rapidly growing SaaS platform, establishing consistency across multiple product lines and improving development efficiency.",
-    "image": "assets/images/project-design-system.jpg",
-    "tags": ["Design System", "Component Library", "Documentation", "Scalability"],
+    "title": "Sistema de Design Tokens",
+    "slug": "design-tokens-system",
+    "shortDescription": "Creación de un sistema completo de design tokens para garantizar consistencia visual en múltiples productos digitales.",
+    "description": "Desarrollo de un sistema escalable de design tokens que permite mantener coherencia visual y facilita el trabajo colaborativo entre equipos de diseño y desarrollo en una organización con múltiples productos.",
+    "image": "assets/images/project-3.jpg",
+    "tags": ["Sistema de Diseño", "Design Tokens", "Figma", "Documentación"],
     "categories": ["design-system", "web"],
     "featured": true,
     "year": "2023",
-    "role": "Lead Design Systems Designer",
-    "duration": "4 months",
-    "team": "2 designers, 4 developers",
+    "role": "Design Systems Designer",
+    "duration": "3 meses",
+    "team": "2 diseñadores, 5 desarrolladores",
     "results": {
-      "developmentSpeed": "+75%",
-      "consistencyScore": "95%",
-      "designDebt": "-80%",
-      "teamSatisfaction": "4.9/5"
+      "designConsistency": "+95%",
+      "developmentSpeed": "+50%",
+      "teamSatisfaction": "4.8/5",
+      "maintenanceTime": "-40%"
     }
   },
   {
-    "title": "Healthcare Portal Redesign",
-    "slug": "healthcare-portal",
-    "shortDescription": "Redesigning a patient portal to improve accessibility and user experience for healthcare management.",
-    "description": "Redesigned a patient portal used by over 50,000 patients to manage appointments, view medical records, and communicate with healthcare providers.",
-    "image": "assets/images/project-healthcare.jpg",
-    "tags": ["Healthcare", "Accessibility", "Information Architecture", "User Research"],
+    "title": "Portal de Recursos Formativos",
+    "slug": "portal-recursos-formativos",
+    "shortDescription": "Diseño de portal web para acceso y gestión de recursos formativos digitales con enfoque en usabilidad y experiencia educativa.",
+    "description": "Creación de un portal web intuitivo para la gestión y acceso a recursos formativos digitales, incluyendo investigación de usuarios, arquitectura de información y diseño de interfaces centradas en la experiencia educativa.",
+    "image": "assets/images/project-placeholder.jpg",
+    "tags": ["Portal Web", "Educación", "Arquitectura de Información", "UX Research"],
     "categories": ["web", "research"],
     "featured": false,
-    "year": "2022",
+    "year": "2023",
     "role": "UX Designer",
-    "duration": "5 months",
-    "team": "3 designers, 5 developers"
+    "duration": "5 meses",
+    "team": "2 diseñadores, 3 desarrolladores, 1 pedagogo"
   },
   {
-    "title": "Food Delivery App Prototype",
-    "slug": "food-delivery-app",
-    "shortDescription": "Interactive prototype for a new food delivery service focusing on local restaurants and sustainability.",
-    "description": "Created an innovative food delivery app concept that connects users with local restaurants while promoting sustainable practices and reducing food waste.",
-    "image": "assets/images/project-food-delivery.jpg",
-    "tags": ["Mobile Design", "Prototyping", "Sustainability", "Local Business"],
-    "categories": ["mobile", "prototype"],
+    "title": "Prototipo Interactivo de App Educativa",
+    "slug": "prototipo-app-educativa",
+    "shortDescription": "Desarrollo de prototipo interactivo para aplicación educativa dirigida a estudiantes de secundaria.",
+    "description": "Creación de un prototipo completamente funcional para una aplicación educativa, incluyendo flujos de usuario, interacciones y testing con usuarios reales.",
+    "image": "assets/images/project-placeholder.jpg",
+    "tags": ["Prototipado", "Educación", "Figma", "Testing"],
+    "categories": ["prototype", "mobile"],
     "featured": false,
-    "year": "2022",
+    "year": "2024",
     "role": "UX Designer",
-    "duration": "3 months",
-    "team": "2 designers, 1 researcher"
-  },
-  {
-    "title": "Educational Platform UX Research",
-    "slug": "education-research",
-    "shortDescription": "Comprehensive UX research study for an online learning platform serving K-12 students.",
-    "description": "Conducted extensive user research for an educational technology platform to understand student learning behaviors and improve engagement.",
-    "image": "assets/images/project-education.jpg",
-    "tags": ["UX Research", "Education", "User Testing", "Analytics"],
-    "categories": ["research", "web"],
-    "featured": false,
-    "year": "2021",
-    "role": "UX Researcher",
-    "duration": "4 months",
-    "team": "1 designer, 2 researchers"
+    "duration": "3 meses",
+    "team": "1 diseñador, 2 investigadores"
   }
 ]
