--- a/data/projects.json
+++ b/data/projects.json
@@ -4,7 +4,7 @@
     "slug": "plataforma-elearning",
     "shortDescription": "Rediseño completo de una plataforma de aprendizaje digital centrada en la experiencia del usuario y la accesibilidad.",
     "description": "Proyecto de rediseño de una plataforma e-learning utilizada por más de 500 usuarios. El objetivo fue mejorar la experiencia de aprendizaje, la navegación y la accesibilidad para diferentes tipos de usuarios.",
-    "image": "assets/images/project-1.jpg",
+    "image": "assets/images/project-placeholder-1.svg",
     "tags": ["Investigación UX", "Diseño UI", "Prototipado", "Accesibilidad"],
     "categories": ["web", "research"],
     "featured": true,
@@ -24,7 +24,7 @@
     "slug": "app-gestion-social",
     "shortDescription": "Aplicación móvil para la gestión de casos sociales y seguimiento de usuarios en organizaciones del tercer sector.",
     "description": "Diseño de una aplicación móvil completa para trabajadores sociales que permite la gestión eficiente de casos, seguimiento de usuarios y generación de informes, optimizada para uso en campo.",
-    "image": "assets/images/project-2.jpg",
+    "image": "assets/images/project-2.svg",
     "tags": ["Diseño Móvil", "UX Research", "Gestión de Datos", "Trabajo Social"],
     "categories": ["mobile", "research"],
     "featured": true,
@@ -44,7 +44,7 @@
     "slug": "design-tokens-system",
     "shortDescription": "Creación de un sistema completo de design tokens para garantizar consistencia visual en múltiples productos digitales.",
     "description": "Desarrollo de un sistema escalable de design tokens que permite mantener coherencia visual y facilita el trabajo colaborativo entre equipos de diseño y desarrollo en una organización con múltiples productos.",
-    "image": "assets/images/project-3.jpg",
+    "image": "assets/images/project-3.svg",
     "tags": ["Sistema de Diseño", "Design Tokens", "Figma", "Documentación"],
     "categories": ["design-system", "web"],
     "featured": true,
